--- a/MDK-ARM/fpm383c/fpm383c.build_log.htm
+++ b/MDK-ARM/fpm383c/fpm383c.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  03/03/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'H:\keil 5\Core\ARM\ARMCC\Bin'
 Build target 'fpm383c'
-compiling main.c...
+compiling fpm383c.c...
 linking...
-Program Size: Code=6800 RO-data=312 RW-data=144 ZI-data=1808  
+Program Size: Code=6776 RO-data=312 RW-data=144 ZI-data=1808  
 FromELF: creating hex file...
 "fpm383c\fpm383c.axf" - 0 Error(s), 0 Warning(s).
 
